--- a/app/src/main/res/layout/cashieractivity.xml
+++ b/app/src/main/res/layout/cashieractivity.xml
@@ -12,8 +12,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="-4dp"
         android:gravity="left"
         android:orientation="vertical"
         android:padding="20dp"
@@ -25,8 +25,9 @@
         android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="186dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="182dp"
+        android:fontFamily="monospace"
         android:text="CashierName" />
 
     <EditText
@@ -39,7 +40,7 @@
         android:layout_marginEnd="29dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="" />
 
 
 </RelativeLayout>
