--- a/app/src/main/res/layout/cashieractivity.xml
+++ b/app/src/main/res/layout/cashieractivity.xml
@@ -33,13 +33,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="371dp"
-        android:layout_height="85dp"
+        android:layout_width="match_parent"
+        android:layout_height="86dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="0dp"
         android:gravity="left"
         android:orientation="vertical"
         android:padding="20dp"
