--- a/app/src/main/res/layout/cashieractivity.xml
+++ b/app/src/main/res/layout/cashieractivity.xml
@@ -51,8 +51,8 @@
         android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="182dp"
+        android:layout_marginStart="-4dp"
+        android:layout_marginTop="160dp"
         android:fontFamily="casual"
         android:text="CashierName" />
 
@@ -126,6 +126,7 @@
         android:inputType=""
         android:text="" />
 
+
     <EditText
         android:id="@+id/editTextTextPersonName7"
         android:layout_width="wrap_content"
@@ -138,5 +139,36 @@
         android:inputType="textPersonName"
         android:text="" />
 
+    <TextView
+        android:id="@+id/question2_id"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textStyle="bold"
+        android:textColor="@android:color/background_dark"
+        />
 
+    <Button
+        android:id="@+id/second_activity_next_button"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="200dp"
+        android:text="Next"
+        android:textColor="@android:color/background_dark"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/second_activity_previous_button"
+        android:layout_width="110dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="50dp"
+        android:text="previous"
+        android:textStyle="bold"
+        android:textColor="@android:color/background_dark"
+        android:textSize="15sp" />
 </RelativeLayout>
