--- a/app/src/main/res/layout/cashieractivity.xml
+++ b/app/src/main/res/layout/cashieractivity.xml
@@ -4,171 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-
-    <EditText
-        android:id="@+id/editTextTextPersonName6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="442dp"
-        android:ems="10"
-        android:inputType=""
-        android:text="" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="29dp"
-        android:ems="10"
-        android:inputType=""
-        android:text="" />
-
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:id="@+id/textView7"
+        android:layout_width="406dp"
+        android:layout_height="57dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="0dp"
-        android:gravity="left"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:text="Cashier" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="136dp"
-        android:layout_height="51dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-4dp"
-        android:layout_marginTop="160dp"
-        android:fontFamily="casual"
-        android:text="CashierName" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="191dp"
-        android:layout_marginEnd="51dp"
-        android:ems="10"
-        android:inputType=""
-        android:text="" />
-
-    <TextView
-        android:id="@+id/cashier_name_edit_text"
-        android:layout_width="136dp"
-        android:layout_height="51dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="250dp"
-        android:fontFamily="casual"
-        android:text="Customercharges" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="29dp"
-        android:ems="10"
-        android:inputType=""
-        android:text="" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="29dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="117dp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="321dp"
-        android:fontFamily="casual"
-        android:text="CustomerPayment" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="29dp"
-        android:ems="10"
-        android:inputType=""
-        android:text="" />
-
-
-    <EditText
-        android:id="@+id/editTextTextPersonName7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="322dp"
-        android:layout_marginEnd="29dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="" />
-
-    <TextView
-        android:id="@+id/question2_id"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textStyle="bold"
-        android:textColor="@android:color/background_dark"
-        />
-
-    <Button
-        android:id="@+id/second_activity_next_button"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="200dp"
-        android:text="Next"
-        android:textColor="@android:color/background_dark"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/second_activity_previous_button"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="50dp"
-        android:text="previous"
-        android:textStyle="bold"
-        android:textColor="@android:color/background_dark"
-        android:textSize="15sp" />
+        android:text="CashierForm" />
 </RelativeLayout>
