--- a/app/src/main/res/layout/bookingactivity.xml
+++ b/app/src/main/res/layout/bookingactivity.xml
@@ -6,15 +6,8 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="406dp"
-        android:layout_height="57dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
-        android:fontFamily="monospace"
-        android:includeFontPadding="true"
-        android:text="CashierForm" />
+        style="@style/colors"
+        android:text="BOOKINGFORM" />
 
     <EditText
         android:id="@+id/editTextTextPersonName12"
@@ -23,12 +16,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="201dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="117dp"
+        android:layout_marginEnd="124dp"
         android:ems="10"
+        android:fontFamily="sans-serif-black"
         android:inputType="textPersonName"
-        android:text="CashierName" />
+        android:text="OfficeName" />
 
     <EditText
         android:id="@+id/editTextTextPersonName13"
@@ -37,10 +31,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="-2dp"
-        android:layout_marginTop="174dp"
-        android:layout_marginEnd="203dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginEnd="124dp"
         android:ems="10"
+        android:fontFamily="sans-serif-black"
         android:inputType="textPersonName"
         android:text="Date" />
 
@@ -51,10 +46,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="234dp"
-        android:layout_marginEnd="193dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="223dp"
+        android:layout_marginEnd="123dp"
         android:ems="10"
+        android:fontFamily="sans-serif-black"
         android:inputType="textPersonName"
         android:text="Time" />
 
@@ -65,14 +61,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="301dp"
-        android:layout_marginEnd="195dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="277dp"
+        android:layout_marginEnd="121dp"
         android:ems="10"
+        android:fontFamily="sans-serif-black"
         android:inputType="textPersonName"
         android:text="address" />
-
-
 
 
 </RelativeLayout>
