--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,17 @@
         <item name="android:textColor">#00FF00</item>
     </style>
 
+    <style name="colors">
+        <item name="android:layout_width">406dp</item>
+        <item name="android:layout_height">57dp</item>
+        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:includeFontPadding">true</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
+    </style>
+
 
 </resources>
